# clang-tidy-use-proper-qt-headers

./: .clang-format  CMakeLists.txt  README.md  UseProperQtHeaders.cpp  UseProperQtHeaders.hpp
